--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Fist of five!</title>
-  <link rel="stylesheet" href="/css/index.css">
-  <!--<script href=".../index.js"></script>
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,19 +22,24 @@
 <body>
   <div class="container">
     <div class="twelve columns">
-    <button type="button">1</button>
-    <button type="button">2</button>
-    <button type="button">3</button>
-    <button type="button">4</button>
-    <button type="button">5</button>
+    <button type="button" onClick = "execute(1)">1</button>
+    <button type="button" onClick = "execute(2)">2</button>
+    <button type="button" onClick = "execute(3)">3 </button>
+    <button type="button" onClick = "execute(4)">4</button>
+    <button type="button" onClick = "execute(5)">5</button>
     </div>
   </div>
   <script>
     var socket = io.connect('http://localhost:3000');
-    socket.on('news', function (data) {
-      console.log(data);
-      socket.emit('my other event', { my: 'data' });
-    });
+    function execute(number){
+      console.log("we made it!", number)
+      socket.emit("vote",number)
+    }
+    // socket.on('news', function (data) {
+    //   console.log(data);
+      //
+
+    // });
   </script>
 </body>
 </html>
