--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="skeleton.css">
+  <link rel="stylesheet" href="main.css">
+
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
@@ -36,7 +41,7 @@
       socket.emit("vote",number)
     }
      socket.on('result', function (data) {
-        console.log(data);
+        console.log(data.average);
         $("#votes").text("Number of votes: " + data.votes)
         $("#average").text("Average: " + data.average)
       });
