--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <button type="button" onClick = "execute(3)">3</button>
     <button type="button" onClick = "execute(4)">4</button>
     <button type="button" onClick = "execute(5)">5</button>
+    <button type="button" onClick = "execute(5)">Reset</button>
+
     <div id = "votes"></div>
     <div id = "average"></div>
     </div>
