added button graphic

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="three" class="finger" onClick="execute(3)"></div>
             <div id="four" class="finger" onClick="execute(4)"></div>
             <div id="five" class="finger" onClick="execute(5)"></div>
-            <div id ="reset" onClick="reset()"></div>
+            <button type="button" onClick="reset()">Reset</button>
             <div id = "votes"></div>
             <div id = "average"></div>
           </div>
