--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
     </div>
       <div class="main">
         <div class="row">
+          <div class="twelve columns">
+              <h3>How was your learning today?</h3>
+          </div>
+        </div>
+        <div class="row">
           <div class="six columns">
-            <h3>How was your learning today?</h3>
+
             <div id="one" class="finger" onClick="execute(1)"></div>
             <div id="two" class="finger" onClick="execute(2)"></div>
             <div id="three" class="finger" onClick="execute(3)"></div>
