--- a/admin.html
+++ b/admin.html
@@ -61,7 +61,7 @@
       else if(data.average >=2){
         $("#message").text("you kinda sucked today...")
       }
-      else if(data.average >=1){
+      else{
         $("#message").text("Wow, you REALLY sucked today")
       }
     });
