--- a/admin.html
+++ b/admin.html
@@ -14,9 +14,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="skeleton.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/main.css">
 
 
   <script src="/socket.io/socket.io.js"></script>
@@ -45,37 +45,39 @@
       </div>
   </div>
   <script>
-  var terrible = new Audio("numbnuts.mp3")
-  var okay = new Audio("Tadaah Sound Effect.mp3")
-  var awesome = new Audio("Woo hoo Sound Effect.mp3")
-    socket.on('result', function (data) {
-      console.log(data.average);
-      $("#votes").text("Number of votes: " + data.votes)
-      $("#average").text("Average: " + data.average)
-      if(data.average == 5){
-        $("#message").text("Wow, you did great today!")
-        awesome.play()
-      }
-      else if(data.average >= 4){
-        $("#message").text("Good work, your students seem very satisified")
-        awesome.play()
-      }
-      else if(data.average >=3){
-        $("#message").text("You did okay today, could be better")
-        okay.play()
-      }
-      else if(data.average >=2){
-        $("#message").text("you kinda sucked today...")
-        terrible.play()
-      }
-      else{
-        $("#message").text("Wow, you REALLY sucked today")
-        terrible.play()
-      }
-    });
-     function reset(){
-      socket.emit("reset")
-     }
+  var terrible = new Audio("sounds/numbnuts.mp3")
+  var okay = new Audio("sounds/Tadaah.mp3")
+  var awesome = new Audio("sounds/Woohoo.mp3")
+  var socket = io.connect('/admin');
+  socket.on('result', function (data) {
+    console.log(data.average);
+    $("#votes").text("Number of votes: " + data.votes)
+    $("#average").text("Average: " + data.average)
+    if(data.average == 5){
+      $("#message").text("Wow, you did great today!")
+      awesome.play()
+    }
+    else if(data.average >= 4){
+      $("#message").text("Good work, your students seem very satisified")
+      awesome.play()
+    }
+    else if(data.average >=3){
+      $("#message").text("You did okay today, could be better")
+      okay.play()
+    }
+    else if(data.average >=2){
+      $("#message").text("you kinda sucked today...")
+      terrible.play()
+    }
+    else{
+      $("#message").text("Wow, you REALLY sucked today")
+      terrible.play()
+    }
+  });
+
+   function reset(){
+    socket.emit("reset")
+   }
   </script>
 </body>
 </html>
