--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
   </div>
   <audio id='yeah'>
-    <source src='sounds/yeah.wav' type='audio/wav'>
+    <source src='sounds/yeah.mp3' type='audio/mp3'>
   </audio>
   <script>
   var canVote = true
